app-deployments/app3/frontend/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-app3
  namespace: app3
spec:
  stripPrefix:
    prefixes:
      - /app3
