app-deployments/app3/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-frontend-svc
  namespace: app3
spec:
  selector:
    app: app3-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
