app-deployments/app3/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress
  namespace: app3
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: >-
      auth-oauth2-proxy-errors@kubernetescrd,
      auth-oauth2-proxy-auth@kubernetescrd,
      app3-strip-app3@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - xtemplate.cc
  rules:
    - host: xtemplate.cc
      http:
        paths:
          - path: /app3/api
            pathType: Prefix
            backend:
              service:
                name: app3-backend-svc
                port:
                  name: api
          - path: /app3
            pathType: Prefix
            backend:
              service:
                name: app3-frontend-svc
                port:
                  name: http
